Fix: modal container spacing

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -62,6 +62,7 @@
   margin: auto;
   max-width: 358px;
   row-gap: 30px;
+  margin-top: 111px;
 }
 
 .modal__name {
